Fix url encoding in playr-loader
This makes sure that:
 - Any special characters inside the channel url are escaped by
   start-chrome-for-playr.sh. Fr example,
	   homepage=http://www.example.org?x=a&y=b
   now becomes
	   playr_loader.html?channel=http://www.example.org%3Fx%3Dy%26y%3Db.
   Previously, it would become
	   playr_loader.html?channel=http://www.example.org?x=a&y=b
   which would cause the y=b parameter to _not_ be passed to
   example.org, but be ignored by playr_loader.
 - Url parameters are decoded by playr_loader.html. This makes sure the
   urlencodings made inside the channel above are properly decoded
   before passing them to the browser in window.location.
 - When appending reload_url inside playr_loader.html, use a ? or &
   depending on whether there is already a ? inside the url.

--- a/home/webc/playr-loader/playr_loader.html
+++ b/home/webc/playr-loader/playr_loader.html
@@ -37,7 +37,14 @@
     };
     
     var gotoPlayer = function() {
-      window.location = queryString.channel + "?reload_url=" + escape(window.location);
+      var url = queryString.channel;
+      if (url.indexOf("?") == -1)
+        url += "?";
+      else
+        url += "&";
+      url += "reload_url=" + escape(window.location);
+
+      window.location = url;
     };
     
     var retryLoading = function() {
@@ -64,6 +71,9 @@
       var vars = query.split("&");
       for (var i=0;i<vars.length;i++) {
         var pair = vars[i].split("=");
+	pair[0] = decodeURIComponent(pair[0])
+	if (pair[1])
+          pair[1] = decodeURIComponent(pair[1])
         	// If first entry with this name
         if (typeof query_string[pair[0]] === "undefined") {
           query_string[pair[0]] = pair[1];
